[project]
name = "python-utils"
version = "0.1.0"
description = "Useful utilities for python projects"
readme = "README.md"
authors = [
    {name = "Evgeniy Anistratov"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "envparse (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["setuptools >= 82.0.0"]
build-backend = "setuptools.build_meta"
